--- a/demo/index.html
+++ b/demo/index.html
@@ -80,6 +80,10 @@
             <p class="u-zeta">@zendeskgarden/react-radios</p>
           </div>
           <div class="u-mb">
+            <a class="u-fg-inherit" href="ranges">Ranges</a>
+            <p class="u-zeta">@zendeskgarden/react-ranges</p>
+          </div>
+          <div class="u-mb">
             <a class="u-fg-inherit" href="select">Select</a>
             <p class="u-zeta">@zendeskgarden/react-select</p>
           </div>
@@ -87,11 +91,11 @@
             <a class="u-fg-inherit" href="selection">Selection</a>
             <p class="u-zeta">@zendeskgarden/react-selection</p>
           </div>
+        </div><div class="l-grid__item u-1/4">
           <div class="u-mb">
             <a class="u-fg-inherit" href="tabs">Tabs</a>
             <p class="u-zeta">@zendeskgarden/react-tabs</p>
           </div>
-        </div><div class="l-grid__item u-1/4">
           <div class="u-mb">
             <a class="u-fg-inherit" href="textfields">Textfields</a>
             <p class="u-zeta">@zendeskgarden/react-textfields</p>
